--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.4</version>
+        </dependency>
     </dependencies>
 </project>
