--- a/src/.project
+++ b/src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>abc-bank-main</name>
+	<name>eclipse</name>
 	<comment></comment>
 	<projects>
 	</projects>
