--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.4</version>
+        </dependency>
     </dependencies>
 </project>
