--- a/.classpath
+++ b/.classpath
@@ -4,13 +4,13 @@
   <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\scala"/>
   <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\java"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\org.scalautils\scalautils_2.11\jars\scalautils_2.11-2.1.5.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\org.scala-sbt\test-interface\jars\test-interface-1.0.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\junit\junit\jars\junit-4.11.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\org.hamcrest\hamcrest-core\jars\hamcrest-core-1.3.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\org.scalatest\scalatest_2.11\bundles\scalatest_2.11-2.2.1.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\org.scala-lang.modules\scala-xml_2.11\bundles\scala-xml_2.11-1.0.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\yin\.ivy2\cache\com.novocode\junit-interface\jars\junit-interface-0.11.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\org.scalautils\scalautils_2.11\jars\scalautils_2.11-2.1.5.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\org.scala-sbt\test-interface\jars\test-interface-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\junit\junit\jars\junit-4.11.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\org.hamcrest\hamcrest-core\jars\hamcrest-core-1.3.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\org.scalatest\scalatest_2.11\bundles\scalatest_2.11-2.2.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\org.scala-lang.modules\scala-xml_2.11\bundles\scala-xml_2.11-1.0.2.jar"/>
+  <classpathentry kind="lib" path="C:\Users\a\.ivy2\cache\com.novocode\junit-interface\jars\junit-interface-0.11.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
