--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+<build>
+    <plugins>
+        <!-- we want JDK 1.6 source and binary compatiblility -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
